--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ anyhow = "1.0"
 
 # Configuration
 config = "0.14"
+dotenvy = "0.15"
 
 # Database
 redis = { version = "0.23", features = ["tokio-comp"] }
@@ -65,12 +66,28 @@ hex = "0.4"
 sha3 = "0.10"
 
 # Ethereum & Blockchain
-ethers = { version = "2.0", features = ["abigen", "ws", "rustls", "openssl"] }
+alloy = { version = "1.0.6", features = [
+    "full",
+    "node-bindings",
+    "rpc-types-debug",
+    "rpc-types-trace",
+    "json-rpc",
+    "rpc-client",
+    "signer-aws",
+    "signer-keystore",
+    "signer-ledger",
+    "signer-mnemonic",     
+    "signer-trezor",
+    "signer-yubihsm",
+    "eips",
+] }
+ethers = { version = "2.0", features = ["ws", "rustls"] }
 
 # Utils
 uuid = { version = "1.0", features = ["v4", "serde"] }
 once_cell = "1.19"
 rand = "0.8"
+fastrand = "2.0"
 
 # Testing
 tempfile = "3.8"
