--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,6 +93,9 @@ fastrand = "2.0"
 
 # Testing
 tempfile = "3.8"
+hmac = "0.12.1"
+sha2 = "0.10.9"
+base64 = "0.22.1"
 
 [dev-dependencies]
 tokio-test = "0.4"
