feat(micro-arb): live feeds, runtime blacklist TTL, exec ordering; docs restructure
- Wire real market data path: Binance bookTicker/depth and DexScreener price to improve opportunity detection and orderbook quality
- Add runtime blacklist with TTL to auto-suppress risky pairs after failures; background cleaner task
- Prioritize priority tokens and DEX first in execution ordering; validate price quality before placing orders
- Monitor: synthesize orderbooks when partial data; better connection status updates
- Config: introduce runtime_blacklist_ttl_secs with sensible defaults
- Docs: move tutorials under docs/, consolidate arbitrage guide, keep CROSS_CHAIN_STATUS under docs/

Why: Reduce bad fills and noisy signals, increase execution reliability, and organize docs for clarity.

--- a/config/default.toml
+++ b/config/default.toml
@@ -57,6 +57,7 @@ enable_cex_trading = true         # Enable CEX trading
 enable_dex_trading = true         # Enable DEX trading
 blacklist_tokens = []             # No blacklisted tokens
 priority_tokens = ["WETH", "USDC", "USDT", "DAI", "WBTC"]  # Priority tokens
+runtime_blacklist_ttl_secs = 900  # 15분 TTL
 
 # Exchange configurations for micro arbitrage
 [[strategies.micro_arbitrage.exchanges]]
