--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,6 +95,7 @@ fastrand = "2.0"
 axum = { version = "0.6", features = ["macros", "json"] }
 hyper = { version = "0.14", features = ["full"] }
 tokio-util = "0.7"
+tower-http = { version = "0.4", features = ["cors"] }
 
 # Testing
 tempfile = "3.8"
