--- a/crack_front/package.json
+++ b/crack_front/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "2.1.1",
     "next": "14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "tailwind-merge": "2.5.2"
   },
   "devDependencies": {
     "@types/node": "20.12.12",
     "@types/react": "18.2.69",
     "@types/react-dom": "18.2.22",
-    "typescript": "5.4.5",
+    "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "postcss": "8.4.39",
+    "tailwindcss": "3.4.7",
+    "typescript": "5.4.5"
   }
 }
