--- a/config/default.toml
+++ b/config/default.toml
@@ -21,6 +21,10 @@ rpc_url = "https://eth-mainnet.g.alchemy.com/v2/YOUR_API_KEY"
 ws_url = "wss://eth-mainnet.g.alchemy.com/v2/YOUR_API_KEY"
 block_time = 12
 flashloan_receiver = "0x0000000000000000000000000000000000000000" # set your deployed FlashLoanReceiver here
+# Optional strategy-specific executors (preferred)
+arbitrage_contract = "0x0000000000000000000000000000000000000000" # contracts/Arbitrage.sol deployed address
+liquidation_contract = "0x0000000000000000000000000000000000000000" # contracts/Liquidation.sol deployed address
+sandwich_contract = "0x0000000000000000000000000000000000000000" # contracts/Sandwich.sol deployed address
 # Optional override if you deploy on different network fork (else code uses default Aave V3 pool const)
 # aave_v3_pool = "0x87870bca3f3fd633543545f15f8073b8a42ad6f8"
 
